style: normalize code formatting across the project